Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="home-image">
-          <img src="images/img2.jpg" alt="Kailas portrait or project screenshot">
+          <img src="img2.jpg" alt="Kailas portrait or project screenshot">
         </div>
       </div>
     </section>
@@ -164,17 +164,17 @@
       <hr class="section-hr">
       <div class="services-container">
         <div class="service-card">
-          <img src="images/icon1.jpg" alt="">
+          <img src="icon1.jpg" alt="">
           <h3>Web Development</h3>
           <p>Responsive sites, component-driven UI, and performance optimizations.</p>
         </div>
         <div class="service-card">
-          <img src="images/icon2.jpg" alt="">
+          <img src="icon2.jpg" alt="">
           <h3>Frontend Engineering</h3>
           <p>React, state management, and accessible UI systems.</p>
         </div>
         <div class="service-card">
-          <img src="images/icon3.jpg" alt="">
+          <img src="icon3.jpg" alt="">
           <h3>UI/UX & Editing</h3>
           <p>Design improvements, prototypes, and content/editor work.</p>
         </div>
@@ -222,4 +222,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
